@@ -16,6 +16,7 @@ define('LOGDIR',      '@judgehost_logdir@');
 define('RUNDIR',      '@judgehost_rundir@');
 define('TMPDIR',      '@judgehost_tmpdir@');
 define('JUDGEDIR',    '@judgehost_judgedir@');
+define('CHROOTDIR',   '@judgehost_chrootdir@');
 
 define('RUNUSER',     '@RUNUSER@');
 define('USE_CGROUPS', '@USE_CGROUPS@');
