@@ -1,11 +1,12 @@
 #!/bin/sh
+# @configure_input@
 #
-# Script to generate a minimal chroot environment with Oracle (Sun) Java
+# Script to generate a basic chroot environment with Oracle (Sun) Java
 # support to allow for Java programs to run in a chroot.
 #
-# This script downloads and installs a Debian base system.
+# This script downloads and installs an Ubuntu base system.
 # Minimum requirements: a Linux system with glibc >= 2.3, wget, ar and
-# a POSIX shell in /bin/sh. About 335 MB disk space is needed. It must
+# a POSIX shell in /bin/sh. About 610 MB disk space is needed. It must
 # be run as root and will install the debootstrap package.
 #
 # Part of the DOMjudge Programming Contest Jury System and licenced
@@ -22,15 +23,14 @@ cleanup() {
 }
 trap cleanup EXIT
 
-# Read command-line parameters:
-CHROOTDIR=$1
-ARCH=$2
+# Default directory where to build the chroot tree:
+CHROOTDIR="@judgehost_chrootdir@"
 
-# Debian release (codename) to bootstrap (note: overriden right below):
-RELEASE="jessie"
+# Ubuntu release (codename) to bootstrap (note: overriden right below):
+RELEASE="trusty"
 
-# If host system is Debian, use its release and architecture by default
-if [ 'Debian' = "$(lsb_release -i -s || true)" ]; then
+# If host system is Ubuntu, use its release and architecture by default
+if [ 'Ubuntu' = "$(lsb_release -i -s || true)" ]; then
 	RELEASE="$(lsb_release -c -s)"
 	if [ -z "$ARCH" ]; then
 		ARCH="$(dpkg --print-architecture)"
@@ -38,27 +38,27 @@ if [ 'Debian' = "$(lsb_release -i -s || true)" ]; then
 fi
 
 # List of possible architectures to install chroot for:
-ARCHLIST="amd64,armel,armhf,arm64,i386,mips,mipsel,powerpc,ppc64el,s390x"
+ARCHLIST="amd64,armel,i386,ia64,mips,mipsel,powerpc,s390,sparc"
 
 # Packages to include during bootstrap process (comma separated):
-INCLUDEDEBS=""
+INCLUDEDEBS="software-properties-common"
 
 # Packages to install after upgrade (space separated):
 INSTALLDEBS="openjdk-7-jre-headless locales"
-# For C# support add: mono-runtime libmono-system2.0-cil
+# For C# support add: mono-mcs mono-devel
 # However running mono within chroot still gives errors...
 
 # Packages to remove after upgrade (space separated):
 REMOVEDEBS=""
 
-# Which debootstrap package to install on non-Debian systems:
-DEBOOTDEB="debootstrap_1.0.67_all.deb"
+# Which debootstrap package to install on non-Debian/Ubuntu systems:
+DEBOOTDEB="debootstrap_1.0.59_all.deb"
 
 # The Debian mirror/proxy below can be passed as environment
 # variables; if none are given the following defaults are used.
 
-# Debian mirror. http.debian.net will pick the 'closest'.
-[ -z "$DEBMIRROR" ] && DEBMIRROR="http://http.debian.net/debian"
+# Ubuntu mirror, modify to match closest mirror
+[ -z "$DEBMIRROR" ] && DEBMIRROR="http://us.archive.ubuntu.com./ubuntu/"
 
 # A local caching proxy to use for debian packages
 # (typically an install of aptcacher-ng), for example:
@@ -70,16 +70,16 @@ export DEBIAN_FRONTEND=noninteractive
 
 usage()
 {
-    echo "Usage: $0 <chrootdir> [<architecture>]"
+    echo "Usage: $0 [-d <chrootdir>] [-a <architecture>]"
     echo "Creates a chroot environment with Oracle (Sun) Java support using the"
-    echo "Debian GNU/Linux distribution."
+    echo "Ubuntu GNU/Linux distribution."
     echo
-    echo "This script must be run as root, <chrootdir> the non-existing target"
+    echo "This script must be run as root, <chrootdir> is the non-existing target"
     echo "location of the chroot and <architecture> one of the following:"
     echo "$ARCHLIST"
     echo
-    echo "If the host runs Debian, no architecture needs to be specified and"
-    echo "the host architecture and release are used."
+    echo "If the host runs Ubuntu, the host architecture and release are used."
+    echo "The default chrootdir is '@judgehost_chrootdir@'."
 }
 
 error()
@@ -94,7 +94,17 @@ if [ "`id -u`" != 0 ]; then
     echo "Warning: you probably need to run this program as root."
 fi
 
-[ -z "$CHROOTDIR" ] && error "No installation directory given."
+# Read command-line parameters:
+while getopts 'a:d:' OPT ; do
+	case $OPT in
+		a) ARCH=$OPTARG ;;
+		d) CHROOTDIR=$OPTARG ;;
+		\?) error "Could not parse options." ;;
+	esac
+done
+shift $(($OPTIND-1))
+
+[ -z "$CHROOTDIR" ] && error "No chroot directory given or default known."
 [ -z "$ARCH" ]      && error "No architecture given or detected."
 
 if [ -e "$CHROOTDIR" ]; then
@@ -163,18 +173,12 @@ cp /etc/resolv.conf /etc/hosts /etc/hostname "$CHROOTDIR/etc" || true
 cp /etc/ssl/certs/ca-certificates.crt "$CHROOTDIR/etc/ssl/certs/" || true
 
 cat > "$CHROOTDIR/etc/apt/sources.list" <<EOF
-# Different releases (incl. optional security repository):
-
-# Stable ($RELEASE)
-deb $DEBMIRROR			$RELEASE		main
-deb http://security.debian.org	$RELEASE/updates	main
-
-# Testing
-#deb $DEBMIRROR			testing		main
-#deb http://security.debian.org	testing/updates	main
-
-# Unstable
-#deb $DEBMIRROR			unstable	main
+deb $DEBMIRROR $RELEASE main
+deb $DEBMIRROR $RELEASE universe
+deb $DEBMIRROR $RELEASE-updates main
+deb $DEBMIRROR $RELEASE-updates universe
+deb $DEBMIRROR $RELEASE-security main
+deb $DEBMIRROR $RELEASE-security universe
 EOF
 
 cat > "$CHROOTDIR/etc/apt/apt.conf" <<EOF
@@ -192,6 +196,7 @@ if [ -n "$DEBPROXY" ]; then
 fi
 
 mount -t proc proc "$CHROOTDIR/proc"
+mount -t sysfs sysfs "$CHROOTDIR/sys"
 
 # Required for some warning messages about writing to log files
 mount --bind /dev/pts "$CHROOTDIR/dev/pts"
@@ -221,6 +226,12 @@ locales	locales/locales_to_be_generated	multiselect
 locales	locales/default_environment_locale	select	None
 EOF
 
+# Disable upstart init scripts(so upgrades work), we don't need to actually run
+# any services in the chroot, so this is fine.
+# Refer to: http://ubuntuforums.org/showthread.php?t=1326721
+chroot "$CHROOTDIR" /bin/sh -c "dpkg-divert --local --rename --add /sbin/initctl"
+chroot "$CHROOTDIR" /bin/sh -c "ln -s /bin/true /sbin/initctl"
+
 # Upgrade the system, and install/remove packages as desired
 chroot "$CHROOTDIR" /bin/sh -c "apt-get update && apt-get dist-upgrade"
 chroot "$CHROOTDIR" /bin/sh -c "apt-get clean"
@@ -241,6 +252,7 @@ chroot "$CHROOTDIR" /bin/sh -c "chmod a-s /usr/bin/wall /usr/bin/newgrp \
 sed -i "s/^root::/root:*:/" "$CHROOTDIR/etc/shadow"
 
 umount "$CHROOTDIR/dev/pts"
+umount "$CHROOTDIR/sys"
 umount "$CHROOTDIR/proc"
 
 exit 0
