@@ -4,6 +4,8 @@ Version 5.1.0 - DEV
 -------------------
  - Minimum MySQL/MariaDB version is now 5.5.3 for full UTF-8 support.
    Also introduces new DJ_MYSQL_COLLATION configuration setting.
+ - Remove CHROOT_SCRIPT configuration setting: automatically run
+   chroot-startstop.sh if a pre-built chroot tree is found.
 
 Version 5.0.0 - 11 August 2015
 ------------------------------
